@@ -1,3 +1,9 @@
+2001-03-15  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
+	* gh.h/gh_data.c (gh_ints2scm):  Changed the signature to use a
+	const int* to reflect that the input array of integers remains
+	unchanged.  Thanks to Brett Viren for the hint.
+
 2001-03-14  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>
 
 	* gh_data.c (gh_scm2chars, gh_scm2shorts, gh_scm2longs),
